--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "googleapis": "^167.0.0",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "sharp": "^0.34.5"
   }
 }
